# example-02

./: README.md  manage.py  pyproject.toml
src/example/: __main__.py  settings.py
