[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "artiom.rotari", email = "artiom.rotari@ebs-integrator.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
]

[project.scripts]
example = "example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "COM812"]
